[package]
name = "gif"
version = "0.1.0"
authors = ["Emma Lo <emma@iscute.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "sqlite", "chrono", "json" ] }
warp = "0.2"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustflake = "0.1.1"
chrono-humanize = "0.0.11"
chrono = "0.4.15"

